--- a/style.css
+++ b/style.css
@@ -42,3 +42,11 @@ main .List_element {
 main .List_element h4 {
     font-size: 20px;
 }
+
+.List_element ul {
+    display: none;
+}
+
+.List_element ul.show {
+    display: block;
+}
